crates/math-core/tests/snapshots/conversion_test__really_standalone_superscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: ^2
---
<math>
    <msup>
        <mrow></mrow>
        <mn>2</mn>
    </msup>
</math>
