crates/math-core/tests/snapshots/conversion_test__relax.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a\\relax b"
---
<math>
    <mi>a</mi>
    <mi>b</mi>
</math>
