crates/math-core/tests/snapshots/conversion_test__relax_as_argument.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x^\\relax"
---
<math>
    <msup>
        <mi>x</mi>
        <mrow></mrow>
    </msup>
</math>
