crates/math-core/tests/snapshots/conversion_test__relax_between_relation_and_operand.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x =\\relax y"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mi>y</mi>
</math>
