crates/math-core/tests/snapshots/conversion_test__root_log.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt[\\log]{x}"
---
<math>
    <mroot>
        <mi>x</mi>
        <mrow><mspace/><mi>log</mi></mrow>
    </mroot>
</math>
