crates/math-core/tests/snapshots/conversion_test__scriptstyle.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sum_{\\genfrac{}{}{0pt}{}{\\scriptstyle 0 \\le i \\le m}{\\scriptstyle 0 < j < n}} P(i, j)"
---
<math>
    <munder>
        <mo lspace="0">∑</mo>
        <mrow>
            <mo>⁣</mo>
            <mfrac linethickness="0">
                <mrow displaystyle="false" scriptlevel="1">
                    <mn>0</mn>
                    <mo lspace="0" rspace="0">≤</mo>
                    <mi>i</mi>
                    <mo lspace="0" rspace="0">≤</mo>
                    <mi>m</mi>
                </mrow>
                <mrow displaystyle="false" scriptlevel="1">
                    <mn>0</mn>
                    <mo lspace="0" rspace="0">&lt;</mo>
                    <mi>j</mi>
                    <mo lspace="0" rspace="0">&lt;</mo>
                    <mi>n</mi>
                </mrow>
            </mfrac>
            <mo>⁣</mo>
        </mrow>
    </munder>
    <mi>P</mi>
    <mo stretchy="false">(</mo>
    <mi>i</mi>
    <mo>,</mo>
    <mi>j</mi>
    <mo stretchy="false">)</mo>
</math>
