crates/math-core/tests/snapshots/conversion_test__set_class_lookahead.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\set{ = | x }"
---
<math>
    <mo stretchy="false">{</mo>
    <mspace width="0.16666667em"/>
    <mo lspace="0">=</mo>
    <mo form="infix">|</mo>
    <mi>x</mi>
    <mspace width="0.16666667em"/>
    <mo stretchy="false">}</mo>
</math>
